2009-09-27  Sebastien Pouliot  <sebastien@ximian.com>

	* Timer_2_1.cs: New. A smaller, internal subset of Timer for 
	Moonlight - needed for Socket.Close(int)

2009-09-24 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* Timer.cs: lock access to the 'timer' field. Attemp to fix bug
	#537921.

Wed Sep 17 11:48:00 CEST 2008 Paolo Molaro <lupus@ximian.com>

	* Timer.cs: rewritten to use Threading.Timer so it doesn't create a
	thread per timer and behaves better. Fixed also a few implementation
	bugs.

2008-07-17  Jb Evain  <jbevain@novell.com>

	* Timer.cs: Fix ArgumentException message.
	Patch by Paul Burton.

2007-10-30  Robert Jordan  <robertj@gmx.net>

	* Timer.cs (set_Enabled): Allow setting Enabled from within
	the Elapsed event handler. Fixes #325368.

2007-09-07  Dick Porter  <dick@ximian.com>

	* Timer.cs: This calls Thread methods in the finalizer too, so use
	the same workaround as in r85425.

2007-09-05  Gert Driesen  <drieseng@users.sourceforge.net>

	* Timer.cs: On 2.0 profile, only allow 32-bit interval in ctor.

2006-12-19  Robert Jordan  <robertj@gmx.net>

	* Timer.cs: Apply the latest patch at attached to bug #77847.

2006-12-19 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Timer.cs: Fixes race condition (bug #77847). Patch from Robert Jordan.

2006-12-11  Robert Jordan  <robertj@gmx.net>

	* Timer.cs: Fix race condition of the wait handle object.
	Fixes bug #77847.

2005-11-16  Sebastien Pouliot  <sebastien@ximian.com> 
 
	* TimersDescriptionAttribute.cs: Revert Description property fix 
	because it doesn't always returns null (exact conditions unknown).

2005-11-16  Sebastien Pouliot  <sebastien@ximian.com>

	* ElapsedEventHandler.cs: Remove [Serializable] from 2.0 profile.
	* Timer.cs: Add [Browsable(false)] to SynchronizingObject property for
	2.0 profile.
	* TimersDescriptionAttribute.cs: Description always returns null.

2005-05-27  Kornél Pál <kornelpal@hotmail.com>

	* Timer.cs: Fixed bug #75068 - Close() does not disable the timer
